preventing content width from being too narrow

--- a/frontend/src/components/layout.scss
+++ b/frontend/src/components/layout.scss
@@ -20,8 +20,8 @@ body {
   @media (min-width: 768px) {
     top: 0;
     bottom: 0;
-    left: 3vw;
-    width: 30vw;
+    left: 5vw;
+    width: 500px;
   }
 }
 
